* ups, overwritten XD, redo * speedup linking in release

--- a/branches/branch-playground/plugins/gpg/gpg.vcproj
+++ b/branches/branch-playground/plugins/gpg/gpg.vcproj
@@ -58,7 +58,7 @@
 				PrecompiledHeaderThrough="gpg_pch.h"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
-				DisableSpecificWarnings="4512"
+				DisableSpecificWarnings="4127,4251,4710,4512"
 				ForcedIncludeFiles="gpg_pch.h"
 			/>
 			<Tool
@@ -74,6 +74,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="/LTCG"
 				AdditionalDependencies="$(SolutionDir)$(ConfigurationName)\sim.lib"
 				OutputFile="$(OutDir)\plugins\$(ProjectName).dll"
 				SuppressStartupBanner="true"
@@ -150,7 +151,7 @@
 				WarningLevel="4"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
-				DisableSpecificWarnings="4512"
+				DisableSpecificWarnings="4127,4251,4710,4512"
 				ForcedIncludeFiles="gpg_pch.h"
 			/>
 			<Tool
