--- a/branches/branch-playground/plugins/jabber/jabber.vcproj
+++ b/branches/branch-playground/plugins/jabber/jabber.vcproj
@@ -60,7 +60,7 @@
 				WarningLevel="4"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
-				DisableSpecificWarnings="4512"
+				DisableSpecificWarnings="4127,4251,4710,4512"
 				ForcedIncludeFiles="jabber_pch.h"
 			/>
 			<Tool
@@ -152,7 +152,7 @@
 				PrecompiledHeaderThrough="jabber_pch.h"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
-				DisableSpecificWarnings="4512"
+				DisableSpecificWarnings="4127,4251,4710,4512"
 				ForcedIncludeFiles="jabber_pch.h"
 			/>
 			<Tool
@@ -168,6 +168,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="/LTCG"
 				AdditionalDependencies="$(SolutionDir)$(ConfigurationName)\sim.lib"
 				OutputFile="$(OutDir)\plugins\$(ProjectName).dll"
 				SuppressStartupBanner="true"
