--- a/branches/branch-playground/plugins/remote/simremote.vcproj
+++ b/branches/branch-playground/plugins/remote/simremote.vcproj
@@ -53,7 +53,7 @@
 				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
-				DisableSpecificWarnings="4512"
+				DisableSpecificWarnings="4127,4251,4710,4512"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -68,6 +68,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="/LTCG"
 				AdditionalDependencies="$(SolutionDir)$(ConfigurationName)\sim.lib"
 				OutputFile="$(OutDir)\$(ProjectName).dll"
 				SuppressStartupBanner="true"
@@ -140,7 +141,7 @@
 				WarningLevel="4"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
-				DisableSpecificWarnings="4512"
+				DisableSpecificWarnings="4127,4251,4710,4512"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
