--- a/branches/branch-playground/sim.vcproj
+++ b/branches/branch-playground/sim.vcproj
@@ -58,7 +58,7 @@
 				PrecompiledHeaderThrough="sim_pch.h"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
-				DisableSpecificWarnings="4512"
+				DisableSpecificWarnings="4127,4251,4710,4512"
 				ForcedIncludeFiles="sim_pch.h"
 			/>
 			<Tool
@@ -73,6 +73,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="/LTCG"
 				AdditionalDependencies="sim\win32\libxml.lib sim\win32\libxslt.lib sim\win32\libjpeg.lib sim\win32\libeay32MD.lib sim\win32\ssleay32MD.lib $(QTDIR)\lib\qtmain.lib Wininet.lib"
 				OutputFile=".\Release/sim.exe"
 				SubSystem="2"
@@ -149,7 +150,7 @@
 				WarningLevel="4"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
-				DisableSpecificWarnings="4512"
+				DisableSpecificWarnings="4127,4251,4710,4512"
 				ForcedIncludeFiles="sim_pch.h"
 			/>
 			<Tool
