--- a/trunk/plugins/windock/windock.vcproj
+++ b/trunk/plugins/windock/windock.vcproj
@@ -48,7 +48,9 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="2"
+				Optimization="3"
+				FavorSizeOrSpeed="1"
+				WholeProgramOptimization="true"
 				AdditionalIncludeDirectories="&quot;$(SolutionDir)\plugins\ontop&quot;"
 				PreprocessorDefinitions="_NDEBUG;NDEBUG"
 				StringPooling="true"
@@ -71,6 +73,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
+				AdditionalOptions="/LTCG"
 				AdditionalDependencies="$(SolutionDir)$(ConfigurationName)\sim.lib"
 				OutputFile="$(OutDir)\plugins\$(ProjectName).dll"
 				SuppressStartupBanner="true"
