Use Qt4's ability for transparent widgets - remove the linux stuff when on linux because: "This feature is available on Embedded Linux, Mac OS X, X11 platforms that support the Composite extension, and Windows 2000 and later."

--- a/branches/branch-playground/plugins/transparent/CMakeLists.txt
+++ b/branches/branch-playground/plugins/transparent/CMakeLists.txt
@@ -15,7 +15,9 @@ IF(WIN32 OR ENABLE_KDE3)
 	SET(transparent_UICS
         	transparentcfgbase.ui
 	)
-
+	SET(transparent_LIBS
+		_core
+	)
 	IF(NOT WIN32)
 	    SET(transparent_SRCS ${transparent_SRCS}
         	transtop.cpp)
