Workon: MacOS X build

--- a/branches/branch-playground/CMakeLists.txt
+++ b/branches/branch-playground/CMakeLists.txt
@@ -14,6 +14,7 @@ endif(COMMAND cmake_policy)
 
 IF( APPLE )
     SET( PROGNAME Sim-IM )
+    SET( MACOSX_BUNDLE_BUNDLE_NAME Sim-IM )
     SET( MACOSX_BUNDLE_ICON_FILE sim.icns )
     SET( MACOSX_BUNDLE_SHORT_VERSION_STRING 0.9.6 )
     SET( MACOSX_BUNDLE_VERSION 0.9.6 )
@@ -153,14 +154,15 @@ if(WIN32)
     SET(SIM_STYLES_DIR styles)
 else(WIN32)
 if(APPLE)
-    SET(LIBDIR         .)
-    SET(BINDIR         .)
-    SET(SIM_I18N_DIR   po)
-    SET(SIM_ICONS_DIR  icons)
-    SET(SIM_PICT_DIR   pict)
-    SET(SIM_PLUGIN_DIR plugins)
-    SET(SIM_SOUND_DIR  sounds)
-    SET(SIM_STYLES_DIR styles)
+    SET(SIMBUNDLE      ${CMAKE_BINARY_DIR}/sim/${PROGNAME}.app)
+    SET(LIBDIR         ${SIMBUNDLE}/Contents/MacOS)
+    SET(BINDIR         ${CMAKE_BINARY_DIR})
+    SET(SIM_I18N_DIR   ${SIMBUNDLE}/Contents/Resources/po)
+    SET(SIM_ICONS_DIR  ${SIMBUNDLE}/Contents/Resources/icons)
+    SET(SIM_PICT_DIR   ${SIMBUNDLE}/Contents/Resources/pict)
+    SET(SIM_PLUGIN_DIR ${SIMBUNDLE}/Contents/PlugIns)
+    SET(SIM_SOUND_DIR  ${SIMBUNDLE}/Contents/Resources/sounds)
+    SET(SIM_STYLES_DIR ${SIMBUNDLE}/Contents/Resources/styles)
 else(APPLE)
     SET(LIB_SUFFIX "" CACHE STRING "Define suffix of directory name (32/64)")
     SET(LIBDIR ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX} CACHE PATH "Path to sim library")
