--- a/branches/branch-playground/sim/CMakeLists.txt
+++ b/branches/branch-playground/sim/CMakeLists.txt
@@ -146,11 +146,15 @@ IF(WIN32)
 ENDIF(WIN32)
 
 # set correct install path
-INSTALL(TARGETS simlib LIBRARY DESTINATION ${LIBDIR} RUNTIME DESTINATION ${LIBDIR})
+INSTALL(TARGETS simlib LIBRARY DESTINATION ${LIBDIR} RUNTIME DESTINATION ${LIBDIR} BUNDLE DESTINATION ${LIBDIR})
 
 IF(WIN32)
     SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
 ENDIF(WIN32)
+
+IF(APPLE)
+    SET(LIBRARY_OUTPUT_PATH ${LIBDIR})
+ENDIF(APPLE)
 
 ##################
 # sim executable #
@@ -178,20 +182,20 @@ endif(WIN32)
 COMPILE_PO_FILES(${CMAKE_SOURCE_DIR}/po sim_EXE_SRCS)
 
 # sim executable
-ADD_EXECUTABLE(sim WIN32 ${sim_EXE_SRCS})
+ADD_EXECUTABLE(${PROGNAME} WIN32 MACOSX_BUNDLE ${sim_EXE_SRCS})
 
 IF(SIM_ENABLE_FPIE)
-    SET_TARGET_PROPERTIES(sim PROPERTIES COMPILE_FLAGS "${SIM_CXX_FPIE_FLAGS}")
-    SET_TARGET_PROPERTIES(sim PROPERTIES LINK_FLAGS "${SIM_PIE_LDFLAGS}")
+    SET_TARGET_PROPERTIES(${PROGNAME} PROPERTIES COMPILE_FLAGS "${SIM_CXX_FPIE_FLAGS}")
+    SET_TARGET_PROPERTIES(${PROGNAME} PROPERTIES LINK_FLAGS "${SIM_PIE_LDFLAGS}")
 ENDIF(SIM_ENABLE_FPIE)
 
 # only needs simlib
-TARGET_LINK_LIBRARIES(sim simlib ${QT_LIBRARIES} ${QT_QTMAIN_LIBRARY})
+TARGET_LINK_LIBRARIES(${PROGNAME} simlib ${QT_LIBRARIES} ${QT_QTMAIN_LIBRARY})
 
 # set correct install path
-INSTALL(TARGETS sim RUNTIME DESTINATION ${BINDIR})
+INSTALL(TARGETS ${PROGNAME} RUNTIME DESTINATION ${BINDIR} BUNDLE DESTINATION ${BINDIR})
 
-SET_TARGET_PROPERTIES(sim PROPERTIES OUTPUT_NAME sim${SIM_FLAVOUR})
+SET_TARGET_PROPERTIES(${PROGNAME} PROPERTIES OUTPUT_NAME ${PROGNAME}${SIM_FLAVOUR})
 
 IF(WIN32)
     SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
