A draft for new profile management implemented PLEASE BACKUP YOUR CONFIG BEFORE TRYING

--- a/branches/branch-playground/CMakeLists.txt
+++ b/branches/branch-playground/CMakeLists.txt
@@ -20,7 +20,7 @@ IF( APPLE )
     SET( MACOSX_BUNDLE_VERSION 0.9.6 )
     SET( MACOSX_BUNDLE_LONG_VERSION_STRING Version 0.9.6 )
 ELSE( APPLE )
-    SET( PROGNAME Sim-IM )
+    SET( PROGNAME sim )
 ENDIF( APPLE )
 
 #INCLUDE(MacroEnsureOutOfSourceBuild)
