--- a/branches/branch-playground/sim.vcproj
+++ b/branches/branch-playground/sim.vcproj
@@ -1472,7 +1472,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Moc&apos;ing $(InputName).h ..."
-						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h"
+						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h&#x0D;&#x0A;"
 						Outputs="$(InputDir)moc_$(InputName).cpp"
 					/>
 				</FileConfiguration>
@@ -1482,7 +1482,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Moc&apos;ing $(InputName).h ..."
-						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h"
+						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h&#x0D;&#x0A;"
 						Outputs="$(InputDir)moc_$(InputName).cpp"
 					/>
 				</FileConfiguration>
@@ -1708,18 +1708,6 @@
 			</File>
 			<File
 				RelativePath=".\sim\qzip\unzip.h"
-				>
-			</File>
-			<File
-				RelativePath=".\sim\xevent.h"
-				>
-			</File>
-			<File
-				RelativePath=".\sim\xeventhandler.h"
-				>
-			</File>
-			<File
-				RelativePath=".\sim\xeventhandlermanager.h"
 				>
 			</File>
 			<File
