initial kde4 support - does not work yet

--- a/branches/branch-playground/CMakeLists.txt
+++ b/branches/branch-playground/CMakeLists.txt
@@ -23,12 +23,6 @@ ELSE( APPLE )
     SET( PROGNAME sim )
 ENDIF( APPLE )
 
-#INCLUDE(MacroEnsureOutOfSourceBuild)
-
-#IF(NOT WIN32)
-#MACRO_ENSURE_OUT_OF_SOURCE_BUILD("SIM-IM requires an out of source build. Please create a separate build directory and run 'cmake path_to_sim_im [options]' there.")
-#ENDIF(NOT WIN32)
-
 #SET(CMAKE_VERBOSE_MAKEFILE ON)
 
 INCLUDE(Flex)
@@ -40,8 +34,6 @@ INCLUDE(DistTarget)
 INCLUDE(CheckCXXCompilerFlag)
 
 OPTION(SIM_ENABLE_FPIE "Enable PIE linking")
-
-SIM_FIND_PLUGINS(${Sim-IM_SOURCE_DIR}/plugins)
 
 FIND_PACKAGE(Qt4 REQUIRED)
 IF(NOT QT_FOUND)
@@ -62,10 +54,18 @@ SET(QT_USE_QTUITOOLS 1)
 SET(QT_USE_QTNETWORK 1)
 SET(QT_USE_QT3SUPPORT 1)
 INCLUDE(${QT_USE_FILE})
-add_definitions(-DQT3_SUPPORT_WARNINGS)
+ADD_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 
 # optional packages
 FIND_PACKAGE(ASPELL)
+FIND_PACKAGE(KDE4)
+IF(KDE4_FOUND)
+  OPTION(ENABLE_KDE4 "Enable KDE4 support" ON)
+  IF(ENABLE_KDE4)
+    ADD_DEFINITIONS(${KDE4_DEFINITIONS} -DUSE_KDE4)
+    INCLUDE_DIRECTORIES(${KDE4_INCLUDES})
+  ENDIF(ENABLE_KDE4)
+ENDIF(KDE4_FOUND)
 
 IF(NOT WIN32 AND NOT APPLE)
     INCLUDE(FindX11)
@@ -182,6 +182,7 @@ endif(WIN32)
 	
 # subdirectories
 ADD_SUBDIRECTORY(sim)
+SIM_FIND_PLUGINS(${Sim-IM_SOURCE_DIR}/plugins)
 SIM_INCLUDE_PLUGINS()
 
 # create config.h
