make 4.3.0 the mininmum qt version to avoid 'No such signal' warnings in fetch.cpp --> noragen plz update your Qt version!

--- a/branches/branch-playground/CMakeLists.txt
+++ b/branches/branch-playground/CMakeLists.txt
@@ -35,6 +35,8 @@ INCLUDE(CheckCXXCompilerFlag)
 
 OPTION(SIM_ENABLE_FPIE "Enable PIE linking")
 
+# need 4.3 for some QHttp functionality
+SET(QT_MIN_VERSION 4.3.0)
 FIND_PACKAGE(Qt4 REQUIRED)
 IF(NOT QT_FOUND)
     MESSAGE(FATAL_ERROR "Could not find Qt4 - cannot compile Sim-IM here")
@@ -58,7 +60,9 @@ ADD_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 
 # optional packages
 FIND_PACKAGE(ASPELL)
-FIND_PACKAGE(KDE4)
+IF(NOT WIN32)
+  FIND_PACKAGE(KDE4)
+ENDIF(NOT WIN32)
 IF(KDE4_FOUND)
   OPTION(ENABLE_KDE4 "Enable KDE4 support" ON)
   IF(ENABLE_KDE4)
