Changed: sim tooltips replaced with Qt4 tooltips Added: sim virtual file system like a replacement for old style mime factory technique, used by tooltips, but it's only preview and test

--- a/branches/branch-playground/sim/CMakeLists.txt
+++ b/branches/branch-playground/sim/CMakeLists.txt
@@ -47,6 +47,7 @@ SET(sim_LIB_SRCS
 		qzip/ioapi.c
 		qzip/qzip.cpp
 		qzip/unzip.c
+		simfs.cpp
 	)
 SET(sim_LIB_HDRS
 	    aboutdata.h
@@ -91,6 +92,7 @@ SET(sim_LIB_HDRS
 		qzip/qzip.h
 		qzip/unzip.h
 		fetchclientprivate.h
+		simfs.h
 	)
 
 # moc the sources
