mark completely ported plugins as qt3support free

--- a/branches/branch-playground/plugins/navigate/CMakeLists.txt
+++ b/branches/branch-playground/plugins/navigate/CMakeLists.txt
@@ -17,4 +17,7 @@ SET(navigate_UICS
 
 ADD_FLEX_FILES(navigate_SRCS parseurl.ll)
 
+REMOVE_DEFINITIONS(-DQT3_SUPPORT)
+REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
+REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(navigate)
