--- a/branches/branch-playground/plugins/weather/CMakeLists.txt
+++ b/branches/branch-playground/plugins/weather/CMakeLists.txt
@@ -24,4 +24,7 @@ SET(weather_LIBS
 
 ADD_JISP_ARCHIVE(jisp weather.jisp weather_SRCS)
 
+REMOVE_DEFINITIONS(-DQT3_SUPPORT)
+REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
+REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(weather)
