--- a/branches/branch-playground/plugins/__homedir/CMakeLists.txt
+++ b/branches/branch-playground/plugins/__homedir/CMakeLists.txt
@@ -19,4 +19,7 @@ SET(__homedir_HDRS
 	${__homedir_HDRS}
 )
 
+REMOVE_DEFINITIONS(-DQT3_SUPPORT)
+REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
+REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(__homedir)
