--- a/branches/branch-playground/plugins/icons/CMakeLists.txt
+++ b/branches/branch-playground/plugins/icons/CMakeLists.txt
@@ -15,4 +15,7 @@ SET(icons_UICS
         iconcfgbase.ui
 )
 
+REMOVE_DEFINITIONS(-DQT3_SUPPORT)
+REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
+REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(icons)
