--- a/branches/branch-playground/plugins/splash/CMakeLists.txt
+++ b/branches/branch-playground/plugins/splash/CMakeLists.txt
@@ -9,6 +9,9 @@ SET(splash_HDRS
         splash.h
 )
 
+REMOVE_DEFINITIONS(-DQT3_SUPPORT)
+REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
+REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(splash)
 
 # splash.png
