--- a/branches/branch-playground/plugins/transparent/CMakeLists.txt
+++ b/branches/branch-playground/plugins/transparent/CMakeLists.txt
@@ -20,4 +20,7 @@ SET(transparent_LIBS
         floaty
 )
 
+REMOVE_DEFINITIONS(-DQT3_SUPPORT)
+REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
+REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(transparent)
