--- a/branches/branch-playground/plugins/windock/CMakeLists.txt
+++ b/branches/branch-playground/plugins/windock/CMakeLists.txt
@@ -13,6 +13,9 @@ IF(WIN32)
     # some needed include dirs
     INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/plugins/ontop)
 
+    REMOVE_DEFINITIONS(-DQT3_SUPPORT)
+    REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
+    REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
     SIM_ADD_PLUGIN(windock)
 ELSE(WIN32)
     MESSAGE(STATUS "Windock plugin can only be used on windows")
