some more qt3support--

--- a/branches/branch-playground/plugins/autoaway/CMakeLists.txt
+++ b/branches/branch-playground/plugins/autoaway/CMakeLists.txt
@@ -59,6 +59,9 @@ IF(COMPILE_PLUGIN)
 
     LINK_DIRECTORIES(${X11_LIBRARY_DIR})
     INCLUDE_DIRECTORIES(${X11_INCLUDE_DIR})
+    REMOVE_DEFINITIONS(-DQT3_SUPPORT)
+    REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
+    REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
     SIM_ADD_PLUGIN(autoaway)
     TARGET_LINK_LIBRARIES(autoaway ${XSS_LIB})
 ELSE(COMPILE_PLUGIN)
