--- a/branches/branch-playground/plugins/action/CMakeLists.txt
+++ b/branches/branch-playground/plugins/action/CMakeLists.txt
@@ -21,4 +21,7 @@ SET(action_UICS
         menucfgbase.ui
 )
 
+REMOVE_DEFINITIONS(-DQT3_SUPPORT)
+REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
+REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(action)
