--- a/branches/branch-playground/plugins/floaty/CMakeLists.txt
+++ b/branches/branch-playground/plugins/floaty/CMakeLists.txt
@@ -11,4 +11,7 @@ SET(floaty_HDRS
         floatywnd.h
 )
 
+REMOVE_DEFINITIONS(-DQT3_SUPPORT)
+REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
+REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(floaty)
