--- a/branches/branch-playground/plugins/netmonitor/CMakeLists.txt
+++ b/branches/branch-playground/plugins/netmonitor/CMakeLists.txt
@@ -13,4 +13,7 @@ SET(netmonitor_HDRS
         netmonitor.h
 )
 
+REMOVE_DEFINITIONS(-DQT3_SUPPORT)
+REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
+REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(netmonitor)
