--- a/branches/branch-playground/plugins/ontop/CMakeLists.txt
+++ b/branches/branch-playground/plugins/ontop/CMakeLists.txt
@@ -19,4 +19,7 @@ SET(ontop_LIBS
         _core
 )
 
+REMOVE_DEFINITIONS(-DQT3_SUPPORT)
+REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
+REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(ontop)
