some more qt3support--

--- a/branches/branch-playground/plugins/osd/CMakeLists.txt
+++ b/branches/branch-playground/plugins/osd/CMakeLists.txt
@@ -18,4 +18,7 @@ SET(osd_UICS
         osdifacebase.ui
 )
 
+REMOVE_DEFINITIONS(-DQT3_SUPPORT)
+REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
+REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(osd)
