--- a/branches/branch-playground/plugins/__migrate/CMakeLists.txt
+++ b/branches/branch-playground/plugins/__migrate/CMakeLists.txt
@@ -15,4 +15,7 @@ SET(__migrate_UICS
         migratedlgbase.ui
 )
 
+REMOVE_DEFINITIONS(-DQT3_SUPPORT)
+REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
+REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(__migrate)
