--- a/branches/branch-playground/plugins/dock/CMakeLists.txt
+++ b/branches/branch-playground/plugins/dock/CMakeLists.txt
@@ -21,4 +21,7 @@ SET(dock_LIBS
         _core
 )
 
+REMOVE_DEFINITIONS(-DQT3_SUPPORT)
+REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
+REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(dock)
