--- a/branches/branch-playground/plugins/sms/CMakeLists.txt
+++ b/branches/branch-playground/plugins/sms/CMakeLists.txt
@@ -19,9 +19,11 @@ SET(sms_UICS
         smssetupbase.ui
 )
 
+SET(sms_LIBS
+        _core
+)
+
 # some needed include dirs
 INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/plugins/_core)
 
 SIM_ADD_PLUGIN(sms)
-
-ADD_DEPENDENCIES(sms _core)
