Starting refactoring of build-system in order to add intellectual make dist there. Will remove all IFs  from plugins cmake files and move them into SIM_ADD_PLUGIN macro so it will be able to build list of files that are required for building Sim-IM (including that is requred for other platforms)

--- a/trunk/plugins/__homedir/CMakeLists.txt
+++ b/trunk/plugins/__homedir/CMakeLists.txt
@@ -2,28 +2,14 @@
 # __homedir library #
 #####################
 
-#conditional sources
-IF(WIN32)
-	SET (__homedir_SRCS homedircfg.cpp)
-	SET (__homedir_HDRS homedircfg.h)
-	SET (__homedir_UICS homedircfgbase.ui)
-ENDIF(WIN32)
+SET(__homedir_PLATFORMS COMMON WIN32)
 
-SET(__homedir_SRCS
-        homedir.cpp
-	${__homedir_SRCS}
-)
+SET (__homedir_SRCS_COMMON homedir.cpp )
+SET (__homedir_SRCS_WIN32  homedircfg.cpp)
 
-SET(__homedir_HDRS
-        homedir.h
-	${__homedir_HDRS}
-)
+SET (__homedir_HDRS_COMMON homedir.h )
+SET (__homedir_HDRS_WIN32  homedircfg.h)
 
-SET(__homedir_MESSAGE_SOURCES ${__homedir_SRCS} ${__homedir_UICS})
-IF(NOT WIN32)
-    SET(__homedir_MESSAGE_SOURCES ${__homedir_MESSAGE_SOURCES} homedircfgbase.ui homedircfg.cpp  PARENT_SCOPE)
-ELSE(NOT WIN32)
-    SET(__homedir_MESSAGE_SOURCES ${__homedir_MESSAGE_SOURCES} PARENT_SCOPE)
-ENDIF(NOT WIN32)
+SET (__homedir_UICS_WIN32  homedircfgbase.ui)
 
 SIM_ADD_PLUGIN(__homedir)
